<resources>
    <string name="app_name">YourSlovakia</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_hint">Search...</string>
    <string name="search_button">Search</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="confirm_password_login">Confirm Password</string>
    <string name="email">user@example.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_language">Change Language</string>
    <string name="theme">Change Theme</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_registered">Already Registered?</string>
    <string name="poi_name">POI Name</string>
    <string name="poi_distance">POI Distance</string>
    <string name="poi_info">More Information</string>
    <string name="poi_detail_info">Information about POI</string>
    <string name="poi_favourite">Add to favourites</string>
    <string name="delete_account">Delete Account</string>
    <string name="access_app_start" translatable="false">Opened application YourSlovakia</string>
    <string name="access_enter_email" translatable="false">Enter Email</string>
    <string name="access_enter_password" translatable="false">Enter Password</string>
    <string name="access_confirm_password" translatable="false">Confirm Password</string>
    <string name="access_register" translatable="false">Register</string>
    <string name="access_login" translatable="false">Login</string>
    <string name="access_edit_profile" translatable="false">Edit Profile</string>
    <string name="access_change_language" translatable="false">Change Language</string>
    <string name="access_change_theme" translatable="false">Change Theme</string>
    <string name="access_delete_account" translatable="false">Delete Account</string>
    <string name="access_enter_search" translatable="false">Enter Search</string>
    <string name="access_search_button" translatable="false">Search</string>
</resources>