<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Email/Name TextView -->
    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_edit_profile"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginTop="32dp"/>

    <!-- Edit Profile Button -->
    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Change Language Button -->
    <Button
        android:id="@+id/button_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:drawableLeft="@drawable/baseline_language_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="showLanguagePopupMenu"/>

    <!-- Theme Button -->
    <Button
        android:id="@+id/button_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:drawableLeft="@drawable/baseline_dark_mode_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_change_language"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Delete Account Button -->
    <Button
        android:id="@+id/button_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:drawableLeft="@drawable/baseline_logout_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
