<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_custom_object"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:src="@drawable/baseline_image_not_available_24" />

    <TextView
        android:id="@+id/text_custom_object_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/poi_name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/image_custom_object"
        app:layout_constraintEnd_toStartOf="@id/button_go_to_details"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_custom_object_description"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/text_custom_object_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/poi_distance"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/image_custom_object"
        app:layout_constraintEnd_toStartOf="@id/button_go_to_details"
        app:layout_constraintTop_toBottomOf="@id/text_custom_object_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/button_go_to_details"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/poi_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_custom_object"
        app:layout_constraintBottom_toBottomOf="@id/image_custom_object"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
